# Oleksandr-Derevianko-KI20

./: README.md
lab08/: README.md
lab08/Report/: ~$Звіт.docx  ~WRL3773.tmp  ~WRL3895.tmp  Звіт.docx
lab08/TestSuite/: TS_8_2.docx  unitTest_calculateS.docx  ~$TS_8_2.docx  ~$itTest_calculateS.docx  ~WRL0003.tmp  ~WRL3856.tmp
lab08/prj/Derevianko_task/: Derevianko_task.cbp  Derevianko_task.depend  Derevianko_task.layout  main.cpp
lab08/prj/ModulesDerevianko/: CMakeLists.txt  ModulesDerevianko.cbp  ModulesDerevianko.depend  ModulesDerevianko.h  ModulesDerevianko.layout  header.h  main.cpp
lab08/prj/TestDriver/: TestDriver.cbp  TestDriver.depend  main.cpp
lab09/: README.md
lab09/Report/: ~$Звіт.docx  Звіт.docx
lab09/TestSuite/: TS_9_4.docx  unitTest_9_1.docx  unitTest_9_2-british.docx  unitTest_9_2-ukranian.docx  unitTest_9_3.docx  ~$TS_9_4.docx  ~$itTest_9_1.docx  ~$itTest_9_3.docx  ~WRL0919.tmp  ~WRL3153.tmp
lab09/prj/Derevianko_task/: Derevianko_task.cbp  Derevianko_task.depend  Derevianko_task.layout  main.cpp
lab09/prj/TestDriver/: TestDriver.cbp  TestDriver.depend  TestDriver.layout  main.cpp
lab10/Report/: Звіт.docx
lab10/TestSuite/: unitTest_10_1.docx  unitTest_10_2.docx  unitTest_10_3.docx
lab10/prj/Derevianko_task/: CMakeLists.txt  main.cpp
lab10/prj/TestSuite/: CMakeLists.txt  main.cpp
lab11/prj/DereviankoKavalevZobenko_task/: DereviankoKavalevZobenko_task.cbp  DereviankoKavalevZobenko_task.depend  DereviankoKavalevZobenko_task.layout  main.cpp  test.txt
lab11/prj/TestDriver/: main.cpp
(+1 files in other folders)
